Latest updates from Coby: metal and welding shops.

--- a/furnashings/thing_styles.css
+++ b/furnashings/thing_styles.css
@@ -37,6 +37,13 @@
   vector-effect: non-scaling-stroke;
 }
 
+.station {
+  stroke: blue;
+  fill: cyan;
+  stroke-width: 1;
+  vector-effect: non-scaling-stroke;    
+}
+
 .storage {
   stroke: red;
   fill: lightgray;
