--- a/Facilities/HobbyShop-DuPont/furnashings/thing_styles.css
+++ b/Facilities/HobbyShop-DuPont/furnashings/thing_styles.css
@@ -44,3 +44,9 @@
   vector-effect: non-scaling-stroke;
 }
 
+.guide {
+  stroke: yellow;
+  fill: none;
+  stroke-width: 1;
+  vector-effect: non-scaling-stroke;
+}
