Consultants and other clustermarket ids.

--- a/Facilities/HobbyShop-DuPont/furnashings/thing_styles.css
+++ b/Facilities/HobbyShop-DuPont/furnashings/thing_styles.css
@@ -50,3 +50,11 @@
   stroke-width: 1;
   vector-effect: non-scaling-stroke;
 }
+
+.consultant {
+  stroke: green;
+  fill: none;
+  stroke-width: 4;
+  vector-effect: non-scaling-stroke;
+}
+
